Fix Dark Mode

--- a/public/css/chart/style.css
+++ b/public/css/chart/style.css
@@ -1,13 +1,11 @@
 .laporan-section {
-    background-color: #fff;
+    background-color: var(--color-white);
     border-radius: 10px;
 }
 
 .statistik-section {
     padding: 20px;
-    background-color: #fff;
     border-radius: 10px;
-    /* margin-top: 70px; */
 }
 
 .statistik-container {
