--- a/public/css/klaim/indexStyle.css
+++ b/public/css/klaim/indexStyle.css
@@ -18,7 +18,8 @@ main{
     border-radius: 6px;
     padding: 30px;
     margin: 51px 0px 0px 15px;
-    background-color: #fff;
+    background-color: var(--color-white);
+    /* background-color: #fff; */
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
 }
 
@@ -27,7 +28,7 @@ main{
     margin-bottom: 30px;
     font-size: 20px;
     font-weight: 600;
-    color: #333;
+    color: var(--color-dark);
 }
 
 .container-1 header::before, .container-2 header::before{
@@ -52,7 +53,8 @@ main{
     border-radius: 6px;
     padding: 30px;
     margin: 51px 0px 0px 15px;
-    background-color: #fff;
+    /* background-color: #fff; */
+    background-color: var(--color-white);
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
 }
 
@@ -82,6 +84,7 @@ th, td{
 
 th{
     background-color: #f2f2f2;
+    background-color: var(--color-white);
 }
 
 td{
