--- a/public/css/modal/style.css
+++ b/public/css/modal/style.css
@@ -43,6 +43,7 @@
     top: 50%;
     left: 20%;
     transform: translate(-50%, -50%);
+    background-color: var(--color-white);
 }
 
 .modal-header {
@@ -175,6 +176,8 @@ textarea {
     border: 1px solid #ccc; 
     border-radius: 4px; 
     resize: vertical; 
+    color: var(--color-dark-variant);
+    background-color: var(--color-white);
 }
 
 select {
